# Conduit

./: README.md  config.json  main.py  pyproject.toml  requirements.txt
Conduit/: ConduitConfig.py  Context.py  EventHandler.py  Handler.py  Server.py  ServerAPI.py  ServerCommands.py  ServerDataFetch.py  ServerRunner.py  SetupScoreboards.py  StdoutParser.py  __init__.py  build_handler.py  load_config.py
Conduit/Enums/: At.py  Color.py  __init__.py
Conduit/Resources/: death_messages.json  en_us.yml  player_actions.json
Conduit/Text/: Style.py  Text.py  __init__.py
Conduit/Types/: Difficulty.py  Dimension.py  Entity.py  EntityDataFetcher.py  Gamemode.py  Location.py  Mob.py  Player.py  Rot.py  Vec3d.py  __init__.py
Conduit/cli/: Cli.py
Conduit/utils/: CheckAnnotation.py  Rcon.py
Examples/: main2.py
conduit/: __init__.py  __main__.py  build_handler.py  context.py  event.py  event_handler.py  handler.py  load_config.py  server.py  server_api.py  server_commands.py  server_runner.py  stdout_parser.py
conduit/Enums/: __init__.py  at.py  dimension.py
conduit/Lang/: lang.py
conduit/Text/: __init__.py  action.py  text.py
conduit/Types/: __init__.py  entity.py  entity_data_fetcher.py  location.py  message.py  mob.py  player.py  rot.py  vec3d.py
conduit/cli/: cli.py
conduit/utils/: rcon.py
